small padding fix displaying errors on mobile

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -418,6 +418,7 @@ tr.warning td:first-child {
     }
 
     tr.warning td:first-child {
+        padding: 0;
         border-left: none;
     }
 }
